Fixed some wrong colors in the user CP.

--- a/zdblack/theme/colours.css
+++ b/zdblack/theme/colours.css
@@ -162,7 +162,7 @@ dl.details dd {
 }
 
 .sep {
-	color: #FF99CC;
+	color: #99c6ff;
 }
 
 /* Pagination
